# prep-flow

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
prep_flow/: __init__.py  base.py  base_loader.py  decorators.py  errors.py  expressions.py  validator.py
samples/: 01_simple_usage.ipynb
test/: test_base_loader.py  test_validator.py
tests/: test_base.py  test_base_loader.py  test_validator.py
tests/data/: test_parse_data.xlsx  test_validate_sheet_name.xlsx
