[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "prep-flow"
authors = [
    {name = "Tomohiko Kato", email = "s.tk1619@gmail.com"},
]
description = "prep-flow: Data preprocessing framework with type validation for data scientists."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.20.3",
    "pandas>=1.2.4",
    "openpyxl>=3.0.0",
    "pydantic>=2.0.0",
]
version = "0.1.2"

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
    "black",
    "isort",
    "jupyter",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.black]
line-length = 119